add GC logging